objects/REVVY__MnQuoteItem__c.object
<CustomObject>
    <fields>
        <fullName>Adjusted_Award__c</fullName>
        <formula>Award_Price__c -  Trade_In_Price__c +  Support_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Extended_MSRP_Currency__c</fullName>
        <formula>Extended_Award_MSRP_Price__c * REVVY__Quote__r.Currency_Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Extended MSRP Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_MSRP_Currency__c</fullName>
        <formula>REVVY__Quote__r.Currency_Conversion_Rate__c *  REVVY__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate MSRP Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Reason__c</fullName>
        <label>Approval Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Less_Trade__c</fullName>
        <formula>Award_Price__c -  Trade_In_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award Less Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_Price__c</fullName>
        <label>Award Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_of_DN__c</fullName>
        <description>Store percentage entered by user. This value will be used in calculating award price when price method is &quot;% of DNet&quot;</description>
        <label>Award % of DN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blend_Of_DN__c</fullName>
        <formula>Total_Extended_Award_Price__c /  Extended_DNet_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blend Of DN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DNetWOTPPAllied__c</fullName>
        <formula>DNet_Price_2__c*REVVY__Quantity__c + Rollup_DNet_Price__c -  Rollup_DNet_for_TPP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNet Without TPP and Allied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNet_Price_2__c</fullName>
        <description>This field is the same as Revvy_Suggested_Price and populated via trigger.</description>
        <label>DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNet_Price__c</fullName>
        <description>[Extended DNet price including children rollup extended DNet price. ]</description>
        <formula>(DNet_Price_2__c *  REVVY__Quantity__c) +  Rollup_DNet_Price__c -  Rollup_DNet_for_TPP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Ext DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNet_for_Rebate__c</fullName>
        <formula>Extended_DNet_Price__c +  Rollup_DNet_for_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNet for Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Store product name/description during support plus process</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Net__c</fullName>
        <label>Distributor Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distributor_Responsibility__c</fullName>
        <formula>REVVY__Quote__r.Distributor_Responsibility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Responsibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ext_Award_MSRP_Alt_Currency__c</fullName>
        <formula>Extended_Award_MSRP_Price__c *  REVVY__Quote__r.Currency_Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext Award MSRP Alt Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Award_DNet_Price__c</fullName>
        <description>This is the award price for a quote item when price method is &quot;% of DNet&quot;.</description>
        <formula>DNet_Price_2__c *  REVVY__Quantity__c *  Award_of_DN__c +  Rollup_Award_DNet_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Award_MSRP_Price__c</fullName>
        <description>This is the award price for a quote item when price method is &quot;% off MSRP&quot;.</description>
        <formula>REVVY__Price__c *  REVVY__Quantity__c *(1- Off_MSRP__c )+  Rollup_Award_MSRP_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended MSRP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Award_Price__c</fullName>
        <formula>Award_Price__c *  REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Award Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Cost__c</fullName>
        <formula>REVVY__CostPrice__c *  REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_DNet_Price__c</fullName>
        <formula>DNet_Price_2__c *  REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_MSRP_Price__c</fullName>
        <formula>if( Performance_Parts_Product__c , REVVY__Unit_Price__c * REVVY__Quantity__c,
REVVY__Price__c *  REVVY__Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended MSRP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Percentage__c</fullName>
        <description>Setup Fee Percentage for National Account</description>
        <label>Setup Fee Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>First_Year_Value__c</fullName>
        <formula>REVVY__One_Time_Total_Value_F__c + REVVY__Yearly_Total_Value_F__c +12* REVVY__Monthly_Total_Value_F__c +52* REVVY__Weekly_Total_Value_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Percent__c</fullName>
        <formula>Gross_Profit_Value__c /  Total_Award_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Value__c</fullName>
        <formula>Total_Award_price__c -  DNet_Price__c +  Total_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSRP_Alternate_Currency__c</fullName>
        <formula>REVVY__Price__c *  REVVY__Quote__r.Currency_Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSRP Alternate Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Misc_Style__c</fullName>
        <label>Misc Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_MSRP__c</fullName>
        <description>Store value of &quot;% off MSRP&quot; entered by user in pricing program page.</description>
        <label>Percent Off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Original_off_MSRP__c</fullName>
        <description>Store the original percent of MSRP</description>
        <label>Original % off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oroginal_of_DNet__c</fullName>
        <description>Original % of DNet</description>
        <label>Oroginal % of DNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Part_Percentage__c</fullName>
        <label>Part Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Parts_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Parts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PricingMethodValue__c</fullName>
        <description>Store pricing method value user enters. Pricing Method could be one of % off MSRP, % of DNet, Total award price, GP$, and GP%.</description>
        <label>Pricing Method Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Program__c</fullName>
        <description>Store value of &quot;Pricing Program&quot; selected by user from &quot;Choose Pricing Program&quot; page. This value is applied to all quote items in this quote.</description>
        <label>Pricing Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID_2__c</fullName>
        <label>Product ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID_3__c</fullName>
        <formula>REVVY__Catalog_Node__r.REVVY__Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteItemSubline_Rebate_as_of_Dnet__c</fullName>
        <formula>Rollup_Sum_percent_Rebate_of_Dnet__c /  Rollup_Num_of_SubLines_for_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteItemSubline Rebate as % of Dnet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QuoteItem_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuoteItem Extension</label>
        <referenceTo>Toro_QuoteItem__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_as_a_of_DN__c</fullName>
        <description>Store value retrieved from Pricing Program table based on a value of either &quot;% off MSRP&quot; or &quot;% of DNet&quot; entered by a user on &quot;Choose Pricing Program&quot; page.</description>
        <label>Rebate as a % of DN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rollup_Award_DNet_Price__c</fullName>
        <description>This value is used in formula field Extended_Award_DNet_Price__c.</description>
        <label>Rollup Award DNet Price</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Extended_Award_DNet_Price__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Award_MSRP_Price__c</fullName>
        <description>This field is used in formula field Extended_Award_MSRP_Price__c.</description>
        <label>Rollup Award MSRP Price</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Extended_Award_MSRP_Price__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Award_Price__c</fullName>
        <label>Rollup Award Price</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Award_Price__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_DNet_Price__c</fullName>
        <description>This field is used in formula field DNet_Price__c which is used in rebate calculation.</description>
        <label>Rollup DNet Price</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.DNet_Price__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_DNet_for_Rebate__c</fullName>
        <description>Rollup of Extended DNet Price of sublines which part Percentage is not 15% for Discovery Land - Deprecated</description>
        <label>RollUp DNet for Rebate</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.DNet_Price__c</summarizedField>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Part_Percentage__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_DNet_for_TPP__c</fullName>
        <description>Rollup of Dnet  for QuoteItem subline for TPP products</description>
        <label>Rollup DNet for TPP</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.DNet_Price__c</summarizedField>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_ID2__c</field>
            <operation>startsWith</operation>
            <value>TPP</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Extended_Award_Price__c</fullName>
        <label>Rollup Extended Award Price</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Extended_Award_Price__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_MSRP_Price__c</fullName>
        <label>Rollup MSRP Price</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Extended_MSRP_Price__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Num_of_SubLines_for_Rebate__c</fullName>
        <label>Rollup Num of SubLines for Rebate</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Exclude_from_Rebate__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Parner_Products__c</fullName>
        <description>Roll up of all the Partner Products</description>
        <label>Rollup Partner Products</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Extended_MSRP_Price__c</summarizedField>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_ID2__c</field>
            <operation>startsWith</operation>
            <value>&quot;L&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Subline_Rebate__c</fullName>
        <label>Rollup Subline Rebate</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Subline_Rebate__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Sum_percent_Rebate_of_Dnet__c</fullName>
        <description>Rollup - Sum percentage of all Sublines Rebate  as a % of DNet; used to get Rebate % of Dnet for quoteitem</description>
        <label>Rollup Sum percent Rebate of Dnet</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Rebate_as_of_DNet__c</summarizedField>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Exclude_from_Rebate__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_TPP__c</fullName>
        <label>Rollup TPP</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Extended_MSRP_Price__c</summarizedField>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_ID2__c</field>
            <operation>startsWith</operation>
            <value>&quot;TPP&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Select_Price_Program_Type__c</fullName>
        <description>@Deprecated</description>
        <label>Select Price Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Market Support Chart A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Support Chart B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Support Chart Large Package</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Price Minnesota State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>------------</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Select_a_Price_Method__c</fullName>
        <label>Select a Price Method</label>
        <picklist>
            <picklistValues>
                <fullName>% of DNET</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>% off MSRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% of Gross Profit Margin</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_Off_MSRP__c</fullName>
        <description>Percent Off MSRP selected from price program. This is used to store original percent off MSRP.</description>
        <label>Selected Percent Off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if quote item is applied to support plus</description>
        <label>Support Plus Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Items__c</fullName>
        <description>Roll-up of sub-line count containing support plus</description>
        <label>Support Plus Items</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Support_Plus_Quantity__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Store value entered by distributor during support plus process</description>
        <label>Support Plus Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Price__c</fullName>
        <label>Support (Price)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Award_price__c</fullName>
        <formula>IF( ISPICKVAL(Select_a_Price_Method__c, &quot;% of DNET&quot;),   Extended_Award_DNet_Price__c ,   (Extended_Award_MSRP_Price__c)- ( Rollup_Parner_Products__c  *(1-Off_MSRP__c)) - ( Rollup_TPP__c  *(1-Off_MSRP__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Toro Award price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Extended_Award_Price__c</fullName>
        <formula>Extended_Award_Price__c +  Rollup_Extended_Award_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Ext Award Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Extended_MSRP_Price__c</fullName>
        <formula>Extended_MSRP_Price__c +  Rollup_MSRP_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Ext MSRP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rebate__c</fullName>
        <formula>(Extended_DNet_Price__c * QuoteItemSubline_Rebate_as_of_Dnet__c  )+  Rollup_Subline_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Setup_Fees__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Setup Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unit_Award__c</fullName>
        <formula>Award_Price__c + Rollup_Award_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traction_Unit__c</fullName>
        <description>Select the traction unit the product is for.</description>
        <inlineHelpText>Select the traction unit the product is for.</inlineHelpText>
        <label>Traction Unit</label>
        <picklist>
            <picklistValues>
                <fullName>GreensPro Rollers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundsmaster 1337 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundsmaster 300/3280 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundsmaster 3500/4300 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundsmaster 360 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundsmaster 4000/4100 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundsmaster 4500/4700 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundsmaster 5900/5910 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundsmaster 7200/7210 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HoverPro 400/450/550</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outcross 9060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProCore Aerators &amp; Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProPass 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProSweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workman Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All other Commercial Wholegoods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Select:</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_In_Price__c</fullName>
        <label>Trade In Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Award_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate that Unit Award has been overridden by user</description>
        <label>Unit Award Overridden</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>